signoz_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz-ingress
  namespace: platform
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: s4z.k3p.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release-signoz-frontend
                port:
                  number: 3301
  tls:
    - hosts:
        - s4z.k3p.ca
