whoami_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: me-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: w4i.k3p.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
    - hosts:
        - w4i.k3p.ca
